# wayfire-plugin_dbus_interface

./: LICENSE  README.md  SECURITY.md  compile-schemas.sh  dbus_interface.cpp  dbus_interface.xml  dbus_interface_backend.cpp  dbus_scale_filter.hpp  expose_gtk_shell.patch  meson.build  meson_options.txt  novos_sublayer_view.patch  novos_view_moved_to_output.patch  org.wayland.compositor.dbus.gschema.xml  uncrustify.ini  wf-prop  wf-prop.cpp
